rename activities-card -> card-alt-4

--- a/profile.html
+++ b/profile.html
@@ -1237,7 +1237,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     >
                                                       <div
                                                         aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
-                                                        class="activities-card dir dir-ltr"
+                                                        class="card-alt-4 dir dir-ltr"
                                                         role="group"
                                                         style="
                                                           --theme_typography-color-primary: var(
@@ -1257,10 +1257,10 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           target="_self"
                                                         ></a>
                                                         <div
-                                                          class="activities-card__media dir dir-ltr"
+                                                          class="card-alt-4__media dir dir-ltr"
                                                         >
                                                           <div
-                                                            class="activities-card__media-container activities-card__rounded-bl activities-card__rounded-br activities-card__rounded-tl activities-card__rounded-tr activities-card__pointer-events dir dir-ltr"
+                                                            class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                             style="
                                                               --media-container_border-radius: var(
                                                                 --i-g-gvoq
@@ -1299,7 +1299,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                               </div>
                                                             </div>
                                                             <div
-                                                              class="activities-card__overlay dir dir-ltr"
+                                                              class="card-alt-4__overlay dir dir-ltr"
                                                               style="
                                                                 --media-overlay_top-row-padding: var(
                                                                   --jaa-ni-h
@@ -1307,7 +1307,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                               "
                                                             >
                                                               <div
-                                                                class="activities-card__overlay-top dir dir-ltr"
+                                                                class="card-alt-4__overlay-top dir dir-ltr"
                                                               >
                                                                 <div></div>
                                                               </div>
@@ -1315,14 +1315,14 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           </div>
                                                         </div>
                                                         <div
-                                                          class="activities-card__ratings activities-card__text-sm dir dir-ltr"
+                                                          class="card-alt-4__ratings card-alt-4__text-sm dir dir-ltr"
                                                         >
                                                           <span
                                                             aria-label="Rating 5.0 out of 5; 1 reviews"
-                                                            class="activities-card__text-sm activities-card__ratings-container dir dir-ltr"
+                                                            class="card-alt-4__text-sm card-alt-4__ratings-container dir dir-ltr"
                                                             role="img"
                                                             ><span
-                                                              class="activities-card__ratings-icon-wrapper dir dir-ltr"
+                                                              class="card-alt-4__ratings-icon-wrapper dir dir-ltr"
                                                               ><svg
                                                                 viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg"
@@ -1342,34 +1342,34 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                                 ></path></svg></span
                                                             ><span
                                                               aria-hidden="true"
-                                                              class="activities-card__ratings-rating dir dir-ltr"
+                                                              class="card-alt-4__ratings-rating dir dir-ltr"
                                                               >5.0</span
                                                             ><span
                                                               aria-hidden="true"
-                                                              class="activities-card__ratings-total dir dir-ltr"
+                                                              class="card-alt-4__ratings-total dir dir-ltr"
                                                               >&nbsp;(1)</span
                                                             ></span
                                                           >
                                                           <div
                                                             aria-hidden="true"
-                                                            class="activities-card__separator dir dir-ltr"
+                                                            class="card-alt-4__separator dir dir-ltr"
                                                           >
                                                             ·
                                                           </div>
                                                           <div
-                                                            class="activities-card__location activities-card__location--small dir dir-ltr"
+                                                            class="card-alt-4__location card-alt-4__location--small dir dir-ltr"
                                                           >
                                                             Food processing
                                                           </div>
                                                         </div>
                                                         <div
-                                                          class="activities-card__title-wrapper dir dir-ltr"
+                                                          class="card-alt-4__title-wrapper dir dir-ltr"
                                                           style="
                                                             --margin-top: 6px;
                                                           "
                                                         >
                                                           <span
-                                                            class="activities-card__title-fw activities-card__title-sm dir dir-ltr"
+                                                            class="card-alt-4__title-fw card-alt-4__title-sm dir dir-ltr"
                                                             style="
                                                               --title_font-weight: var(
                                                                 --e-y-j-d-v-j
@@ -2360,7 +2360,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               >
                                                 <div
                                                   aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
-                                                  class="activities-card dir dir-ltr"
+                                                  class="card-alt-4 dir dir-ltr"
                                                   role="group"
                                                   style="
                                                     --theme_typography-color-primary: var(
@@ -2380,10 +2380,10 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     target="_blank"
                                                   ></a>
                                                   <div
-                                                    class="activities-card__media dir dir-ltr"
+                                                    class="card-alt-4__media dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="activities-card__media-container activities-card__rounded-bl activities-card__rounded-br activities-card__rounded-tl activities-card__rounded-tr activities-card__pointer-events dir dir-ltr"
+                                                      class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                       style="
                                                         --media-container_border-radius: var(
                                                           --i-g-gvoq
@@ -2420,7 +2420,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="activities-card__overlay dir dir-ltr"
+                                                        class="card-alt-4__overlay dir dir-ltr"
                                                         style="
                                                           --media-overlay_top-row-padding: var(
                                                             --jaa-ni-h
@@ -2428,20 +2428,20 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                         "
                                                       >
                                                         <div
-                                                          class="activities-card__overlay-top dir dir-ltr"
+                                                          class="card-alt-4__overlay-top dir dir-ltr"
                                                         >
                                                           <div></div>
                                                         </div>
                                                         <div
-                                                          class="activities-card__overlay-bottom dir dir-ltr"
+                                                          class="card-alt-4__overlay-bottom dir dir-ltr"
                                                         >
                                                           <button
                                                             aria-label="Pause "
                                                             type="button"
-                                                            class="activities-card__btn-pause dir dir-ltr"
+                                                            class="card-alt-4__btn-pause dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="activities-card__btn-pause-icon-wrapper dir dir-ltr"
+                                                              class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
                                                               ><svg
                                                                 viewBox="0 0 16 16"
                                                                 xmlns="http://www.w3.org/2000/svg"
@@ -2467,14 +2467,14 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="activities-card__ratings dir dir-ltr"
+                                                    class="card-alt-4__ratings dir dir-ltr"
                                                   >
                                                     <span
                                                       aria-label="Rating 5.0 out of 5; 1 reviews"
-                                                      class="activities-card__ratings-container dir dir-ltr"
+                                                      class="card-alt-4__ratings-container dir dir-ltr"
                                                       role="img"
                                                       ><span
-                                                        class="activities-card__ratings-icon-wrapper dir dir-ltr"
+                                                        class="card-alt-4__ratings-icon-wrapper dir dir-ltr"
                                                         ><svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -2494,32 +2494,32 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           ></path></svg></span
                                                       ><span
                                                         aria-hidden="true"
-                                                        class="activities-card__ratings-rating dir dir-ltr"
+                                                        class="card-alt-4__ratings-rating dir dir-ltr"
                                                         >5.0</span
                                                       ><span
                                                         aria-hidden="true"
-                                                        class="activities-card__ratings-total dir dir-ltr"
+                                                        class="card-alt-4__ratings-total dir dir-ltr"
                                                         >&nbsp;(<!-- -->1<!-- -->)</span
                                                       ></span
                                                     >
                                                     <div
                                                       aria-hidden="true"
-                                                      class="activities-card__separator dir dir-ltr"
+                                                      class="card-alt-4__separator dir dir-ltr"
                                                     >
                                                       ·
                                                     </div>
                                                     <div
-                                                      class="activities-card__location dir dir-ltr"
+                                                      class="card-alt-4__location dir dir-ltr"
                                                     >
                                                       Food processing
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="activities-card__title-wrapper dir dir-ltr"
+                                                    class="card-alt-4__title-wrapper dir dir-ltr"
                                                     style="--margin-top: 7px"
                                                   >
                                                     <span
-                                                      class="activities-card__title-fw activities-card__title dir dir-ltr"
+                                                      class="card-alt-4__title-fw card-alt-4__title dir dir-ltr"
                                                       style="
                                                         --title_font-weight: var(
                                                           --e-y-j-d-v-j
